<resources>
    <string name="app_name">Android Assignment</string>
    <string name="app_subtitle">Recycler View</string>
    <string name="dagger">Dagger</string>
    <string name="list_value">List Value</string>
    <string name="countries">Countries</string>
    <string name="users">Users</string>

    <string name="name">Name</string>
    <string name="native_name">Native Name</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="population">Population</string>
    <string name="area">Area</string>
    <string name="currency">Currency</string>
    <string name="flag">Flag</string>
    <string name="independent">Independent</string>

    <string name="image">Image</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="cell">Cell</string>
</resources>