<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="country"
            type="com.mahfuznow.android_assignment.model.country.Country" />
    </data>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.CountryDetailsFragment">

        <ImageView
            android:id="@+id/flag"
            loadImage="@{country.flags.png}"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/flag"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/name"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:text="@{country.name}"
                android:textSize="18sp" />

            <View style="@style/Divider.Horizontal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/nativeName"
                android:text="@string/native_name" />

            <TextView
                android:id="@+id/nativeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/native_name"
                android:text="@{country.nativeName}"
                android:textSize="18sp" />

            <View style="@style/Divider.Horizontal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/capital"
                android:text="@string/capital" />

            <TextView
                android:id="@+id/capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/capital"
                android:text="@{country.capital}"
                android:textSize="18sp" />

            <View style="@style/Divider.Horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/region"
                android:text="@string/region" />

            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/region"
                android:text="@{country.region}"
                android:textSize="18sp" />

            <View style="@style/Divider.Horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/population"
                android:text="@string/population" />

            <TextView
                android:id="@+id/population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/population"
                android:text="@{country.population}"
                android:textSize="18sp" />

            <View style="@style/Divider.Horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/area"
                android:text="@string/area" />

            <TextView
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                android:text="@{country.area}"
                android:textSize="18sp" />

            <View style="@style/Divider.Horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/independent"
                android:text="@string/independent" />

            <TextView
                android:id="@+id/independent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/independent"
                android:text="@{country.independent}"
                android:textSize="18sp" />

            <View style="@style/Divider.Horizontal" />
        </LinearLayout>

    </LinearLayout>

</layout>